# ComicX

./: .dockerignore  .gitignore  API_TESTING.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION.md  GEMINI_FIRST.md  GEMINI_INTEGRATION.md  MODELSLAB_INTEGRATION.md  QUICK_START.md  README.md  STREAMLIT_APP.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_comic_generation.py  test_setup.py  test_streamlit.py
config/agents/: content.yaml  processing.yaml  synthesis.yaml  text.yaml  video.yaml  visual.yaml
config/tasks/: content.yaml  processing.yaml  synthesis.yaml  text.yaml  video.yaml  visual.yaml
docker/: nginx.conf
docs/: API_ARCHITECTURE.md  ARCHITECTURE.md  STREAMLIT_APP.md
frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CreateComic.jsx  Gallery.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/store/: comicStore.js
src/: main.py
src/api/: main.py
src/crews/: __init__.py  content_crew.py  processing_crew.py  synthesis_crew.py  text_crew.py  video_crew.py  visual_crew.py
src/models/: config.py  schemas.py
src/tools/: __init__.py  export_tools.py  image_tools.py  layout_tools.py  pdf_tools.py
src/ui/: streamlit_app.py
src/ui/.streamlit/: config.toml
src/utils/: __init__.py  llm_factory.py
tests/: test_openrouter_api.py  test_setup.py  test_streamlit.py  verify_pipeline.py
